--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <li><a href="lab2.html">Aquisição de Vídeo</a></li>
             <li><a href="lab3.html">Codificação de Imagem por DCT</a></li>
             <li><a href="lab4.html">Codificação de Imagem por DWT</a></li>
-            <li><a href="">Percepção Auditiva</a></li>
-            <li><a href="">PDS da Voz e Áudio</a></li>
+            <li><a href="lab5.html">Percepção Auditiva</a></li>
+            <li><a href="lab6.html">PDS da Voz e Áudio</a></li>
             <li><a href="">Codificação de Voz</a></li>
             <li><a href="">Codificação de Áudio</a></li>
             <li><a href="">MIDI e Resposta Impulsiva</a></li>
