--- a/lab5.html
+++ b/lab5.html
@@ -63,6 +63,7 @@
             <img src="assets/img/lab 5/TESTE LUCAS 2.jpg" alt="teste 2 do Lucas " onclick="expandImage(this)">
             <img src="assets/img/lab 5/TESTE GABRIEL 1.jpg" alt="teste do Gabriel " onclick="expandImage(this)">
             <img src="assets/img/lab 5/TESTE GABRIEL 2.jpg" alt="teste 2 do Gabriel " onclick="expandImage(this)">
+            <p class="resumo">No teste de audiometria, todos integrantes apresentaram uma perca auditiva média para as primeiras faixas e também divergências entre teste 1 e 2. Pelo ambiente inadequado para a realização do teste, com muitos ruídos externos, o teste audiométrico se torna mais variante e menos confiável para conclusões sobre os integrantes. Caso fosse realizado em um local silencioso, haveria uma melhor calibração prévia e resultados mais assertivos</p>
         </div>
         <div id="popup" class="popup">
             <span class="close" onclick="closePopup()">&times;</span>
@@ -74,16 +75,22 @@
         <div class="gallery">
             <img src="assets/img/lab 5/tabela1.png" alt="tabela do teste de faixa auditível" onclick="expandImage(this)">
         </div>
+        <p class ="resumo">Quanto ao teste de faixa audível, é possível notar baixa variabilidade entre os integrantes para a frequência mínima, enquanto para a frequência máxima há maior divergência e mostra que a audição de alguns pode estar comprometida. Porém, vale a lembrança do ambiente inadequado para testes, sem o silêncio adequado.</p>
 
         <h3>Resultados do teste de Localização de Fonte Sonora</h3>
         <div class="gallery">
             <img src="assets/img/lab 5/tabela2.png" alt="tabela do teste de Localização de Fonte Sonora" onclick="expandImage(this)">
         </div>
+        <p class ="resumo">No teste de localização sonora foi possível observar pouca variação de resultados para o barulho de chaves, com a maior diferença entre ângulo real e ângulo indicado sendo de 20 graus. Para o som de sino, houve maior divergência de resultados e, em dois casos, uma diferença de 180 graus entre o ângulo real e o indicado.
+Os resultados dos testes podem ser explicados pelas características acústicas dos sons e pela forma como nosso sistema auditivo processa as informações sonoras.
+O som das chaves é composto por frequências médias e altas, além de ser rico em transientes curtos e marcantes. Esses aspectos tornam o som mais direcional, ou seja, o cérebro pode usar as diferenças de tempo de chegada (Interaural Time Difference - ITD) e de intensidade (Interaural Level Difference - ILD) entre os ouvidos para determinar a direção com mais precisão. Além disso, o som das chaves pode ter componentes de alta frequência que interagem com a forma do pavilhão auditivo, ajudando na localização espacial.
+O som do sino tem uma característica tonal mais prolongada, com frequências médias e altas, mas também possui harmônicos que podem causar ambiguidades na percepção espacial. Além disso, sons com padrões mais regulares, como o sino, podem ser mais difíceis de localizar, já que o cérebro pode não ter tantas pistas temporais ou de intensidade para diferenciar direções.</p>
 
         <h3>Resultados do teste de Mascaramento de Tons Harmônicos</h3>
         <div class="gallery">
             <img src="assets/img/lab 5/tabela3.png" alt="tabela do teste de Mascaramento de Tons Harmônicos" onclick="expandImage(this)">
         </div>
+        <p class = "resumo"> No teste de mascaramento, os integrantes tiveram resultados muito parecidos, alternando entre 12 e 15 dB para atenuação. </p>
 
     <h3>Comentários e conclusões</h3>  
         <p class="resumo">Um outro teste psicoacústico que podemos citar é o Teste de Discriminação de Duração. Ele avalia a capacidade do ouvido humano de perceber 
