--- a/lab5.html
+++ b/lab5.html
@@ -21,7 +21,7 @@
 
     <main>
         <audio controls class="audio">
-            <source src="" type="audio/ogg">
+            <source src="assets/audio/lab5.waptt.opus" type="audio/ogg">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <p>Alt: Controlador de áudio com as informações da página</p>
@@ -47,7 +47,7 @@
         <h3>Metodologia</h3>
         <p class="resumo">Inicialmente, cada integrante realizou um teste de audiometria online utilizando o fone de ouvido envolvente. Os resultados foram salvos em formato pdf e realizados pelo menos duas vezes por cada integrante. </p>
         <a href="https://hearingtest.online/"><p >link do teste de audiometria</p></a>
-        <p class="resumo">Em seguida, todos realizaram um outro teste de faixa auditível, também utilizando o microfone envolvente. Os valores de frequência mínima audível (faMÍN) e frequência máxima audível (faMÁX) foram anotados em uma tabela e dispobilizados abaixo.</p>
+        <p class="resumo">Em seguida, todos realizaram um outro teste de faixa auditível, também utilizando o fone de ouvido envolvente. Os valores de frequência mínima audível (faMÍN) e frequência máxima audível (faMÁX) foram anotados em uma tabela e dispobilizados abaixo.</p>
         <a href="https://www.youtube.com/watch?v=H-iCZElJ8m0"><p>link do teste de faixa auditível</p></a>
         <p class="resumo">O terceiro consiste de um teste de localização de fonte sonora, onde cada participante realizou seis medições, três com um som de chaves e três com um som de sinos. Os participantes foram vendados e utilizavam um capacete com transferidor para determinar o ângulo no qual a fonte sonora ficaria, tendo o participante que adivinhar onde era essa localização.</p>
         <p class="resumo">O último é um teste de mascaramento de tons harmônicos, onde cada participante, utilizando o notebook fornecido abaixo, deveria procurar o limiar de atenuação em que os dois tons harmônicos, f1 e f2, em passos de atenuação de 5dB.</p>
@@ -63,7 +63,7 @@
             <img src="assets/img/lab 5/TESTE LUCAS 2.jpg" alt="teste 2 do Lucas " onclick="expandImage(this)">
             <img src="assets/img/lab 5/TESTE GABRIEL 1.jpg" alt="teste do Gabriel " onclick="expandImage(this)">
             <img src="assets/img/lab 5/TESTE GABRIEL 2.jpg" alt="teste 2 do Gabriel " onclick="expandImage(this)">
-            <p class="resumo">No teste de audiometria, todos integrantes apresentaram uma perca auditiva média para as primeiras faixas e também divergências entre teste 1 e 2. Pelo ambiente inadequado para a realização do teste, com muitos ruídos externos, o teste audiométrico se torna mais variante e menos confiável para conclusões sobre os integrantes. Caso fosse realizado em um local silencioso, haveria uma melhor calibração prévia e resultados mais assertivos</p>
+            <p class="resumo">No teste de audiometria, todos integrantes apresentaram uma perca auditiva média para as primeiras faixas e também divergências entre teste 1 e 2. Pelo ambiente inadequado para a realização do teste, com muitos ruídos externos, o teste audiométrico se torna mais variante e menos confiável para conclusões sobre os integrantes. Caso fosse realizado em um local silencioso, haveria uma melhor calibração prévia e resultados mais assertivos.</p>
         </div>
         <div id="popup" class="popup">
             <span class="close" onclick="closePopup()">&times;</span>
@@ -82,23 +82,65 @@
             <img src="assets/img/lab 5/tabela2.png" alt="tabela do teste de Localização de Fonte Sonora" onclick="expandImage(this)">
         </div>
         <p class ="resumo">No teste de localização sonora foi possível observar pouca variação de resultados para o barulho de chaves, com a maior diferença entre ângulo real e ângulo indicado sendo de 20 graus. Para o som de sino, houve maior divergência de resultados e, em dois casos, uma diferença de 180 graus entre o ângulo real e o indicado.
-Os resultados dos testes podem ser explicados pelas características acústicas dos sons e pela forma como nosso sistema auditivo processa as informações sonoras.
-O som das chaves é composto por frequências médias e altas, além de ser rico em transientes curtos e marcantes. Esses aspectos tornam o som mais direcional, ou seja, o cérebro pode usar as diferenças de tempo de chegada (Interaural Time Difference - ITD) e de intensidade (Interaural Level Difference - ILD) entre os ouvidos para determinar a direção com mais precisão. Além disso, o som das chaves pode ter componentes de alta frequência que interagem com a forma do pavilhão auditivo, ajudando na localização espacial.
-O som do sino tem uma característica tonal mais prolongada, com frequências médias e altas, mas também possui harmônicos que podem causar ambiguidades na percepção espacial. Além disso, sons com padrões mais regulares, como o sino, podem ser mais difíceis de localizar, já que o cérebro pode não ter tantas pistas temporais ou de intensidade para diferenciar direções.</p>
+        Os resultados dos testes podem ser explicados pelas características acústicas dos sons e pela forma como nosso sistema auditivo processa as informações sonoras.
+        O som das chaves é composto por frequências médias e altas, além de ser rico em transientes curtos e marcantes. Esses aspectos tornam o som mais direcional, ou seja, o cérebro pode usar as diferenças de tempo de chegada (Interaural Time Difference - ITD) e de intensidade (Interaural Level Difference - ILD) entre os ouvidos para determinar a direção com mais precisão. Além disso, o som das chaves pode ter componentes de alta frequência que interagem com a forma do pavilhão auditivo, ajudando na localização espacial.
+        O som do sino tem uma característica tonal mais prolongada, com frequências médias e altas, mas também possui harmônicos que podem causar ambiguidades na percepção espacial. Além disso, sons com padrões mais regulares, como o sino, podem ser mais difíceis de localizar, já que o cérebro pode não ter tantas pistas temporais ou de intensidade para diferenciar direções.</p>
 
         <h3>Resultados do teste de Mascaramento de Tons Harmônicos</h3>
         <div class="gallery">
             <img src="assets/img/lab 5/tabela3.png" alt="tabela do teste de Mascaramento de Tons Harmônicos" onclick="expandImage(this)">
         </div>
-        <p class = "resumo"> No teste de mascaramento, os integrantes tiveram resultados muito parecidos, alternando entre 12 e 15 dB para atenuação. </p>
+        <p class="resumo"> No teste de mascaramento, os integrantes tiveram resultados muito parecidos, alternando entre 12 e 15 dB para atenuação. Como ele serve para investigar os limites da audibilidade de tons em presença de outros sons que compartilham relações harmônicas, pode-se dizer que todos tiveram uma dificuldade moderada para distinguir os sons, sendo Gabriel o mais afetado.</p>
 
-    <h3>Comentários e conclusões</h3>
-        
+    
+            <h3 class="tabela">Resultados Psicoacústicos</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Audiometria</th>
+                        <th>Faixa Audível</th>
+                        <th>Localização Espacial</th>
+                        <th>Mascaramento de Som</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Bruno K</td>
+                        <td>Perdas leves nas frequências de 250 a 2 kHz</td>
+                        <td>Abaixo da média em frequências altas</td>
+                        <td>Leve confusão com som</td>
+                        <td>Média de atenuação de -12,75 dB</td>
+                    </tr>
+                    <tr>
+                        <td>Bruno N</td>
+                        <td>Perdas moderadas de 250 a 1 kHz e leves de 2 a 8 kHz</td>
+                        <td>Abaixo da média em frequências altas</td>
+                        <td>Percepção normal</td>
+                        <td>Média de atenuação de -12 dB</td>
+                    </tr>
+                    <tr>
+                        <td>Gabriel</td>
+                        <td>Perdas leves nas frequências de 250 a 4 kHz</td>
+                        <td>Na média em frequências altas</td>
+                        <td>Leve confusão com som</td>
+                        <td>Média de atenuação de -14,25 dB</td>
+                    </tr>
+                    <tr>
+                        <td>Lucas</td>
+                        <td>Perdas leves entre 250 a 4 kHz</td>
+                        <td>Abaixo da média em frequências altas</td>
+                        <td>Percepção normal</td>
+                        <td>Média de atenuação de -12,75 dB</td>
+                    </tr>
+                </tbody>
+            </table>
+        <h3>Comentários e conclusões</h3>
         <p class="resumo">Um outro teste psicoacústico que podemos citar é o Teste de Discriminação de Duração. Ele avalia a capacidade do ouvido humano de perceber 
             diferenças na duração de sons apresentados. Ele envolve a apresentação de dois tons, normalmente com a mesma frequência e intensidade, mas com durações 
             um pouco diferentes. O participante precisa identificar qual dos tons tem a duração mais longa ou a mais curta. As durações deles são ajustadas de acordo 
             com o desempenho do participante, variando de modo a explorar a capacidade de discriminação em diferentes intervalos de tempo. Ele é utilizado para estudar 
-            como o sistema auditivo processa variações temporais,</p>
+            como o sistema auditivo processa variações temporais.</p>
         <p class="resumo">Um estudo recente explorou a relação entre as emissões otoacústicas (EOAs) e a percepção psicoacústica de perda auditiva induzida por ruído. Esse 
             trabalho investiga como as emissões otoacústicas de produto de distorção (DPOAEs) podem ser usadas para monitorar danos nas células ciliadas da cóclea em indivíduos 
             com perda auditiva devido à exposição a sons intensos. A pesquisa mostra que as características das DPOAEs podem fornecer informações adicionais sobre a percepção de 
