--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <li><a href="lab4.html">Codificação de Imagem por DWT</a></li>
             <li><a href="lab5.html">Percepção Auditiva</a></li>
             <li><a href="lab6.html">PDS da Voz e Áudio</a></li>
-            <li><a href="">Codificação de Voz</a></li>
-            <li><a href="">Codificação de Áudio</a></li>
-            <li><a href="">MIDI e Resposta Impulsiva</a></li>
+            <li><a href="lab7.html">Codificação de Voz</a></li>
+            <li><a href="lab8.html">Codificação de Áudio</a></li>
+            <li><a href="lab8.html">MIDI e Resposta Impulsiva</a></li>
         </ul>
         <h3>Seminários</h3>
         <ul>
