--- a/lab6.html
+++ b/lab6.html
@@ -21,7 +21,7 @@
 
     <main>
         <audio controls class="audio">
-            <source src="" type="audio/ogg">
+            <source src="assets/audio/lab6.waptt.opus" type="audio/ogg">
             Seu navegador não suporta o elemento de áudio.
         </audio>
         <p>Alt: Controlador de áudio com as informações da página</p>
@@ -209,6 +209,7 @@
                 Seu navegador não suporta vídeos HTML5.
             </video>
         </div>
+        <p class="resumo">Aqui também podemos notar melhor as diferenças entre os microfones capacitivos e dinâmicos, onde um apresenta maior ruído do ambiente e o outro apresenta um som mais limpo.</p>
 
 
 
@@ -280,7 +281,10 @@
         </p>
 
     <h3>Comentários e conclusões</h3>  
-
+    <p class="resumo">Este relatório explorou a gravação e análise de sinais de voz com diferentes microfones, técnicas de processamento temporal e tempo-frequência, além de características acústicas da prosódia em diferentes contextos. O trabalho evidenciou a importância da escolha de equipamentos e métodos para a captura e análise do som, bem como a riqueza das informações presentes na voz humana.</p>
+    <p class="resumo">Os resultados mostraram diferenças marcantes entre microfones dinâmicos e capacitivos. Enquanto os dinâmicos oferecem maior robustez e menor sensibilidade ao ruído ambiente, os capacitivos destacam sutilezas sonoras, sendo mais adequados para gravações em ambientes controlados. Essa distinção foi clara ao comparar o espectrograma e a forma de onda das gravações de "Vambora" e "Bohemian Rhapsody".</p>
+    <p class="resumo">A análise temporal, como a detecção do pitch e da envoltória de energia, permitiu identificar características fundamentais da voz em diferentes contextos, como a música, o verso e a fala normal. Essa variação também foi corroborada pela análise de frequências fundamentais e formantes, que refletiram as especificidades acústicas de cada cenário.</p>
+    <p class="resumo">Por fim, a análise de fonemas e plosivos evidenciou o potencial do espectrograma para identificar detalhes na articulação da fala, mesmo em tarefas mais simples, como a pronúncia de dígitos do RA. Este estudo demonstrou como ferramentas de análise multimodal podem ser aplicadas para explorar a complexidade e a expressividade da voz, proporcionando insights valiosos para o processamento e aplicações futuras.</p>
     </main>
 
     <footer>
