--- a/lab6.html
+++ b/lab6.html
@@ -331,6 +331,71 @@
             os fonemas plosivos encontrados através do espectrograma do áudio foram /b/ e /o/ em Bruno, e /m/ em Melati e /k/ em Kuvasney.
         </p>
 
+	<!-- COLAB brunoN inicio -->
+
+	<h2>COLAB (Bruno Neves Carneiro)</h2>
+	<h3>Contornos de Energia para dígitos, voz falada e poema</h3>
+
+	<!-- Galeria de contornos de energia -->
+	<div class="gallery">
+    	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_EnergiaDaVoz_frase1.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
+    	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_EnergiaDaVoz_camoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
+    	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_EnergiaDaVoz_RA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<h3>Espectrogramas para dígitos, voz falada e poema</h3>
+	<div class="gallery">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Espectrograma_frase1.png" alt="Espectrograma de trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Espectrograma_camoes.png" alt="Espectrograma do trecho de Camões" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Espectrograma_RA.png" alt="Espectrograma para dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="trecho">A partir dos espectrogramas, calculamos novamente os contornos de energia dos arquivos em questão:</p>
+<div class="gallery">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_ContornoDeEnergia_frase1.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_ContornoDeEnergia_camoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_ContornoDeEnergia_RA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<h3>Período de Pitch e Frequência Fundamental de uma vogal para dígitos, voz falada e poema</h3>
+<div class="gallery">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Pitch_frase1_ES.png" alt="Período de Pitch e Frequência Fundamental: trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Pitch_camoes_CAM.png" alt="Período de Pitch e Frequência Fundamental: trecho de Camões" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Pitch_RA_1.png" alt="Período de Pitch e Frequência Fundamental: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">Para o caso do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada, podemos notar que a vogal em questão (/en/ de "entre") apresenta período de pitch de 2,5 ms e frequência fundamental de 400 Hz.</p>
+	<p class="resumo">Para o caso do trecho de Camões, a vogal em questão (primeiro /a/ de "Campos") apresenta período de pitch de 9,1 ms e frequência fundamental de 110 Hz.</p>
+	<p class="resumo">Para os dígitos do RA 11202020201, a vogal em questão (/u/ do número um) apresenta período de pitch de 8,7 ms e frequência fundamental de 115 Hz.</p>
+
+	<h3>Formantes do trecho para dígitos, voz falada e poema</h3>
+<div class="gallery">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Formante_frase1.png" alt="Formantes: trecho da música 'Vambora' - voz falada" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Formanate_camoes.png" alt="Formantes: trecho de Camões" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_Formante_RA.png" alt="Formantes: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">As formantes de f1 a f4 (quatro primeiros picos no espectro) do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada estão situados em F1: 60 Hz, F2: 400 Hz, F3: 800 Hz e F4: 1580 Hz.</p>
+	<p class="resumo">As formantes de f1 a f4 do trecho de Camões estão situados em F1: 110 Hz, F2: 220 Hz, F3: 330 Hz e F4: 440 Hz.</p>
+	<p class="resumo">As formantes de f1 a f4 dos dígitos do RA (11202020201) estão situados em F1: 110 Hz, F2: 230 Hz, F3: 360 Hz e F4: 480 Hz.</p>
+
+	<h3>Determinação de Consoantes e Plosivos para dígitos</h3>
+	<div class="gallery">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares_Limpo.png" alt="Espectro de áudio contendo a fala de Bruno Neves Carneiro" onclick="expandImage(this)">
+	    <img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares.png" alt="Espectro de áudio com indicações de consoantes sonoras (amarelo) e surdas plosivas (vermelho)" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">O áudio pronunciando os dígitos do RA 11202020201 em pares contém consoantes surdas plosivas (destacadas em vermelho no espectrograma) /t/ (contida na palavra "vinte") e consoantes sonoras (destacadas em amarelo) /z/ (onze), /v/ (vinte) e /m/ (um).</p>
+
+	<!-- Áudio RA 11202020201 em pares -->
+	<audio controls class="audio">
+	    <source src="assets/audio/lab 6/Bruno Neves Carneiro/RA11202020201_pares.wav" type="audio/ogg">
+	    Seu navegador não suporta o elemento de áudio.
+	</audio>
+	<p>Alt: Pronúncia do RA 11202020201 em pares de números.</p>
+
+	<!-- COLAB brunoN fim -->
+        
     <h3>Comentários e conclusões</h3>  
     <p class="resumo">Este relatório explorou a gravação e análise de sinais de voz com diferentes microfones, técnicas de processamento temporal e tempo-frequência, além de características acústicas da prosódia em diferentes contextos. O trabalho evidenciou a importância da escolha de equipamentos e métodos para a captura e análise do som, bem como a riqueza das informações presentes na voz humana.</p>
     <p class="resumo">Os resultados mostraram diferenças marcantes entre microfones dinâmicos e capacitivos. Enquanto os dinâmicos oferecem maior robustez e menor sensibilidade ao ruído ambiente, os capacitivos destacam sutilezas sonoras, sendo mais adequados para gravações em ambientes controlados. Essa distinção foi clara ao comparar o espectrograma e a forma de onda das gravações de "Vambora" e "Bohemian Rhapsody".</p>
