Lab6 - Gabriel (incompleto)

--- a/lab6.html
+++ b/lab6.html
@@ -396,6 +396,67 @@
 
 	<!-- COLAB brunoN fim -->
         
+    <h2>COLAB (Gabriel Andrade de Vasconcelos)</h2>
+	<h3>Contornos de Energia para Dígitos, Voz Falada e Poema</h3>
+
+	<!-- Galeria de contornos de energia -->
+	<div class="gallery">
+		<img src="assets/img/lab 6/Gabriel/EnergiaFrase.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EnergiaCamoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EnergiaRA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<h3>Espectrogramas para Dígitos, Voz Falada e Poema</h3>
+	<div class="gallery">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaFrase.png" alt="Espectrograma de trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaCamoes.png" alt="Espectrograma do trecho de Camões" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectrograma para dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="trecho">A partir dos espectrogramas, calculamos novamente os contornos de energia dos arquivos em questão:</p>
+	<div class="gallery">
+		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaFrase.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaCamoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaRA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<h3>Período de Pitch e Frequência Fundamental de uma Vogal para Dígitos, Voz Falada e Poema</h3>
+	<div class="gallery">
+		<img src="assets/img/lab 6/Gabriel/AutocorrFrase.png" alt="Período de Pitch e Frequência Fundamental: trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/AutocorrCamoes.png" alt="Período de Pitch e Frequência Fundamental: trecho de Camões" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/AutocorrRA.png" alt="Período de Pitch e Frequência Fundamental: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">Para o caso do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada, podemos notar que a vogal em questão (/en/ de "entre") apresenta período de pitch de 2,5 ms e frequência fundamental de 400 Hz.</p>
+	<p class="resumo">Para o caso do trecho de Camões, a vogal em questão (primeiro /a/ de "Campos") apresenta período de pitch de 9,1 ms e frequência fundamental de 110 Hz.</p>
+	<p class="resumo">Para os dígitos do RA 11202020153, a vogal em questão (/u/ do número um) apresenta período de pitch de 8,7 ms e frequência fundamental de 115 Hz.</p>
+
+	<h3>Formantes do Trecho para Dígitos, Voz Falada e Poema</h3>
+	<div class="gallery">
+		<img src="assets/img/lab 6/Gabriel/FormantesFrase.png" alt="Formantes: trecho da música 'Vambora' - voz falada" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/FormantesCamoes.png" alt="Formantes: trecho de Camões" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/FormantesRA.png" alt="Formantes: dígitos do RA 11202020201" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">As formantes de f1 a f4 (os quatro primeiros picos no espectro) do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada estão localizadas em F1: 110 Hz, F2: 1180 Hz, F3: 2520 Hz e F4: 2520 Hz.</p>
+	<p class="resumo">As formantes de f1 a f4 do trecho de Camões estão localizadas em F1: 110 Hz, F2: 1710 Hz, F3: 2660 Hz e F4: 2660 Hz.</p>
+	<p class="resumo">As formantes de f1 a f4 dos dígitos do RA 11202020153 estão localizadas em F1: 410 Hz, F2: 1260 Hz, F3: 2120 Hz e sem um F4.</p>
+
+	<h3>Determinação de Consoantes e Plosivos para Dígitos</h3>
+	<div class="gallery">
+		<img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares_Limpo.png" alt="Espectro de áudio contendo a fala de Bruno Neves Carneiro" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares.png" alt="Espectro de áudio com consoantes sonoras (amarelo) e surdas plosivas (vermelho)" onclick="expandImage(this)">
+	</div>
+
+	<p class="resumo">O áudio pronunciando os dígitos do RA 11202020201 em pares contém consoantes surdas plosivas (destacadas em vermelho no espectrograma) /t/ (contida na palavra "vinte") e consoantes sonoras (destacadas em amarelo) /z/ (onze), /v/ (vinte) e /m/ (um).</p>
+
+	<!-- Áudio RA 11202020201 em pares -->
+	<audio controls class="audio">
+		<source src="assets/audio/lab 6/Bruno Neves Carneiro/RA11202020201_pares.wav" type="audio/ogg">
+		Sua navegação não suporta o elemento de áudio.
+	</audio>
+	<p>Alt: Pronúncia do RA 11202020201 em pares de números.</p>
+
     <h3>Comentários e conclusões</h3>  
     <p class="resumo">Este relatório explorou a gravação e análise de sinais de voz com diferentes microfones, técnicas de processamento temporal e tempo-frequência, além de características acústicas da prosódia em diferentes contextos. O trabalho evidenciou a importância da escolha de equipamentos e métodos para a captura e análise do som, bem como a riqueza das informações presentes na voz humana.</p>
     <p class="resumo">Os resultados mostraram diferenças marcantes entre microfones dinâmicos e capacitivos. Enquanto os dinâmicos oferecem maior robustez e menor sensibilidade ao ruído ambiente, os capacitivos destacam sutilezas sonoras, sendo mais adequados para gravações em ambientes controlados. Essa distinção foi clara ao comparar o espectrograma e a forma de onda das gravações de "Vambora" e "Bohemian Rhapsody".</p>
