Lab 6 - Gabriel Andrade

--- a/lab6.html
+++ b/lab6.html
@@ -403,33 +403,33 @@
 	<div class="gallery">
 		<img src="assets/img/lab 6/Gabriel/EnergiaFrase.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
 		<img src="assets/img/lab 6/Gabriel/EnergiaCamoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/Gabriel/EnergiaRA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EnergiaRA.png" alt="Contorno de Energia: dígitos do RA 11202020153" onclick="expandImage(this)">
 	</div>
 
 	<h3>Espectrogramas para Dígitos, Voz Falada e Poema</h3>
 	<div class="gallery">
 		<img src="assets/img/lab 6/Gabriel/EspectrogramaFrase.png" alt="Espectrograma de trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
 		<img src="assets/img/lab 6/Gabriel/EspectrogramaCamoes.png" alt="Espectrograma do trecho de Camões" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectrograma para dígitos do RA 11202020201" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectrograma para dígitos do RA 11202020153" onclick="expandImage(this)">
 	</div>
 
 	<p class="trecho">A partir dos espectrogramas, calculamos novamente os contornos de energia dos arquivos em questão:</p>
 	<div class="gallery">
 		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaFrase.png" alt="Contorno de Energia: trecho de 'Vambora' - em voz falada" onclick="expandImage(this)">
 		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaCamoes.png" alt="Contorno de Energia: trecho de Camões" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaRA.png" alt="Contorno de Energia: dígitos do RA 11202020201" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/ContornoEspectogramaRA.png" alt="Contorno de Energia: dígitos do RA 11202020153" onclick="expandImage(this)">
 	</div>
 
 	<h3>Período de Pitch e Frequência Fundamental de uma Vogal para Dígitos, Voz Falada e Poema</h3>
 	<div class="gallery">
 		<img src="assets/img/lab 6/Gabriel/AutocorrFrase.png" alt="Período de Pitch e Frequência Fundamental: trecho da música 'Vambora' - em voz falada" onclick="expandImage(this)">
 		<img src="assets/img/lab 6/Gabriel/AutocorrCamoes.png" alt="Período de Pitch e Frequência Fundamental: trecho de Camões" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/Gabriel/AutocorrRA.png" alt="Período de Pitch e Frequência Fundamental: dígitos do RA 11202020201" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/AutocorrRA.png" alt="Período de Pitch e Frequência Fundamental: dígitos do RA 11202020153" onclick="expandImage(this)">
 	</div>
 
-	<p class="resumo">Para o caso do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada, podemos notar que a vogal em questão (/en/ de "entre") apresenta período de pitch de 2,5 ms e frequência fundamental de 400 Hz.</p>
-	<p class="resumo">Para o caso do trecho de Camões, a vogal em questão (primeiro /a/ de "Campos") apresenta período de pitch de 9,1 ms e frequência fundamental de 110 Hz.</p>
-	<p class="resumo">Para os dígitos do RA 11202020153, a vogal em questão (/u/ do número um) apresenta período de pitch de 8,7 ms e frequência fundamental de 115 Hz.</p>
+	<p class="resumo">Para o caso do trecho da música <em>Vambora</em> da Adriana Calcanhoto em voz falada, podemos notar que a vogal em questão (/en/ de "entre") apresenta período de pitch de 8,1 ms e frequência fundamental de 123,5 Hz.</p>
+	<p class="resumo">Para o caso do trecho de Camões, a vogal em questão (primeiro /a/ de "Campos") apresenta período de pitch de 8 ms e frequência fundamental de 125 Hz.</p>
+	<p class="resumo">Para os dígitos do RA 11202020153, a vogal em questão (/u/ do número um) apresenta período de pitch de 4.7 ms e frequência fundamental de 212,8 Hz.</p>
 
 	<h3>Formantes do Trecho para Dígitos, Voz Falada e Poema</h3>
 	<div class="gallery">
@@ -444,18 +444,11 @@
 
 	<h3>Determinação de Consoantes e Plosivos para Dígitos</h3>
 	<div class="gallery">
-		<img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares_Limpo.png" alt="Espectro de áudio contendo a fala de Bruno Neves Carneiro" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/BrunoN/UFABC_20243_CSM_LAB6_COLAB_I6_RA_Pares.png" alt="Espectro de áudio com consoantes sonoras (amarelo) e surdas plosivas (vermelho)" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectro de áudio contendo a fala de Bruno Neves Carneiro" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaPlosivosRA.png" alt="Espectro de áudio com consoantes sonoras (amarelo) e surdas plosivas (vermelho)" onclick="expandImage(this)">
 	</div>
 
-	<p class="resumo">O áudio pronunciando os dígitos do RA 11202020201 em pares contém consoantes surdas plosivas (destacadas em vermelho no espectrograma) /t/ (contida na palavra "vinte") e consoantes sonoras (destacadas em amarelo) /z/ (onze), /v/ (vinte) e /m/ (um).</p>
-
-	<!-- Áudio RA 11202020201 em pares -->
-	<audio controls class="audio">
-		<source src="assets/audio/lab 6/Bruno Neves Carneiro/RA11202020201_pares.wav" type="audio/ogg">
-		Sua navegação não suporta o elemento de áudio.
-	</audio>
-	<p>Alt: Pronúncia do RA 11202020201 em pares de números.</p>
+	<p class="resumo">Os dígitos do RA 11202020153 sendo ditos individualmente resultam nos fonemas plosivos /m/ (um), /d/ (dois), /i/ (cinco) e /t/ (três).</p>
 
     <h3>Comentários e conclusões</h3>  
     <p class="resumo">Este relatório explorou a gravação e análise de sinais de voz com diferentes microfones, técnicas de processamento temporal e tempo-frequência, além de características acústicas da prosódia em diferentes contextos. O trabalho evidenciou a importância da escolha de equipamentos e métodos para a captura e análise do som, bem como a riqueza das informações presentes na voz humana.</p>
