Lab 6 - Gabriel Andrade (2)

--- a/lab6.html
+++ b/lab6.html
@@ -444,8 +444,8 @@
 
 	<h3>Determinação de Consoantes e Plosivos para Dígitos</h3>
 	<div class="gallery">
-		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectro de áudio contendo a fala de Bruno Neves Carneiro" onclick="expandImage(this)">
-		<img src="assets/img/lab 6/Gabriel/EspectrogramaPlosivosRA.png" alt="Espectro de áudio com consoantes sonoras (amarelo) e surdas plosivas (vermelho)" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaRA.png" alt="Espectro de áudio contendo o RA 11202020153" onclick="expandImage(this)">
+		<img src="assets/img/lab 6/Gabriel/EspectrogramaPlosivosRA.png" alt="Espectro de áudio com fonemas plosivos em verde" onclick="expandImage(this)">
 	</div>
 
 	<p class="resumo">Os dígitos do RA 11202020153 sendo ditos individualmente resultam nos fonemas plosivos /m/ (um), /d/ (dois), /i/ (cinco) e /t/ (três).</p>
