--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <li><a href="lab5.html">Percepção Auditiva</a></li>
             <li><a href="lab6.html">PDS da Voz e Áudio</a></li>
             <li><a href="lab7.html">Codificação de Voz</a></li>
-            <li><a href="lab8.html">Codificação de Áudio</a></li>
-            <li><a href="lab8.html">MIDI e Resposta Impulsiva</a></li>
+            <li><a href="lab8.html">Codificação de Áudio/MIDI e Resposta Impulsiva</a></li>
         </ul>
         <h3>Seminários</h3>
         <ul>
@@ -52,9 +51,9 @@
         </ul>
         <h3>Contatos</h3>
         <ul>
-            <li>-</li>
-            <li>-</li>
-            <li>-</li>
+            <li>bruno.kuvasney@aluno.ufabc.edu.br</li>
+            <li>bruno.carneiro@aluno.ufabc.edu.br</li>
+            <li>gabriel.vasconcelos@aluno.ufabc.edu.br</li>
             <li>lucas.medeiros@aluno.ufabc.edu.br</li>
         </ul>
         <h3>Aplicação Multimídia</h3>
