--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3>Seminários</h3>
         <ul>
             <li><a href="dct.html">Transformada Discreta de Cosseno (DCT)</a></li>
-            <li>-</li> 
+            <li><a href="MIDI_IR.html">Transformada Discreta de Cosseno (DCT)</a></li> 
         </ul>
         <h3>Contatos</h3>
         <ul>
