--- a/lab8.html
+++ b/lab8.html
@@ -74,7 +74,7 @@
         </div>
         <p class="trecho">alt = Espectrogramas do trecho da musica Enter Sandman</p>
 
-        <h3>Conversão - Enter Sandman</h3>
+        <h3>Conversão - Enter Sandman - Lucas Medeiros</h3>
 
         <h4>MP3</h4>
         <audio controls class="audio">
